<resources>
    <string name="app_name">FinalProject</string>
    <string name="start_button">Start</string>
    <string name="user_name">Name</string>
    <string name="user_age">Age</string>
    <string name="user_height">Height (cm)</string>
    <string name="user_height2">Height (ft)</string>
    <string name="user_weight">Weight (kg)</string>
    <string name="user_weight2">Weight (lbs)</string>
    <string name="acc_label">Accelerometer</string>
    <string name="gyro_label">Gyrometer</string>
</resources>
