<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_age"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/userHeight"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_height"
        app:layout_constraintStart_toStartOf="@+id/userAge"
        app:layout_constraintTop_toBottomOf="@+id/userAge" />

    <TextView
        android:id="@+id/userWeight"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_height2"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userWeight2" />

    <TextView
        android:id="@+id/userWeight3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_weight2"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userWeight" />

    <TextView
        android:id="@+id/userWeight2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_weight"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userHeight" />

    <TextView
        android:id="@+id/accLabel"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="276dp"
        android:text="@string/acc_label"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userHeight" />

    <TextView
        android:id="@+id/accVal"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:text="kkddddd"
        app:layout_constraintBottom_toBottomOf="@+id/accLabel"
        app:layout_constraintStart_toEndOf="@+id/accLabel"
        app:layout_constraintTop_toTopOf="@+id/accLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gyroVal"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="48dp"
        android:text="kk"
        app:layout_constraintBottom_toBottomOf="@+id/gyroLabel"
        app:layout_constraintStart_toEndOf="@+id/gyroLabel"
        app:layout_constraintTop_toTopOf="@+id/gyroLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gyroLabel"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="316dp"
        android:text="@string/gyro_label"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userHeight" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="372dp"
        android:onClick="startDetection"
        android:text="@string/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameVal"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName"
        app:layout_constraintVertical_bias="0.52" />

    <EditText
        android:id="@+id/userAgeVal"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/userNameVal"
        app:layout_constraintTop_toBottomOf="@+id/userNameVal" />

    <EditText
        android:id="@+id/userHeightVal"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/userAgeVal"
        app:layout_constraintTop_toBottomOf="@+id/userAgeVal" />

    <EditText
        android:id="@+id/userHeightVal2"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="@+id/userWeightVal"
        app:layout_constraintTop_toBottomOf="@+id/userWeightVal" />

    <EditText
        android:id="@+id/userWeightVal2"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="@+id/userHeightVal2"
        app:layout_constraintTop_toBottomOf="@+id/userHeightVal2" />

    <EditText
        android:id="@+id/userWeightVal"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/userHeightVal"
        app:layout_constraintTop_toBottomOf="@+id/userHeightVal" />


</android.support.constraint.ConstraintLayout>
